--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,9 @@
 RewriteEngine On
 
-RewriteRule ^ru\/ ru.html [L]
-RewriteRule ^he\/ he.html [L]
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule ^ru(.*)\/$ \/ru.html [L,R=301]
+#RewriteRule ^ru$ ru.html [L]
+RewriteRule ^he$ he.html [L]
 
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
