.htaccess fix bug

--- a/.htaccess
+++ b/.htaccess
@@ -1,10 +1,10 @@
-RewriteEngine On
+<IfModule mod_rewrite.c>
+    RewriteEngine On
 
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^ru(.*)\/$ \/ru.html [L,R=301]
-#RewriteRule ^ru$ ru.html [L]
-RewriteRule ^he$ he.html [L]
+    RewriteRule ^ru ru.html [L]
+    RewriteRule ^he he.html [L]
 
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^ index.html [L]
+    RewriteCond %{REQUEST_FILENAME} !-f
+    RewriteCond %{REQUEST_FILENAME} !-d
+    RewriteRule ^ index.html [L]
+</IfModule>
